# CachePhoenix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: download-ffmpeg.ps1  download-ffmpeg.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blockfile_index.rs  cache.rs  lib.rs  main.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/scanner/: CacheFolderSelect.tsx  FullDiskAccessDialog.tsx  RecoveryConfig.tsx  RecoveryProgress.tsx  ScanProgress.tsx  ScanResults.tsx  ScannerPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/lib/: ffmpeg.ts  permissions.ts  recovery.ts  scanService.ts  scanner.ts  thumbnailCache.ts  utils.ts
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts
