[package]
name = "cachephoenix"
version = "1.0.0"
description = "Recover media files from Chromium-based browser caches"
authors = ["MaDetho"]
edition = "2021"
license = "MIT"

[lib]
name = "cachephoenix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-macos-permissions = "2"
